// Visualize your database schema in the following
// URL: https://dbdiagram.io/d
// Docs: https://dbml.dbdiagram.io/docs

Enum OrderStatus {
  created
  in_production
  cancelled
  finished
}

Enum PaymentStatus {
  paid
  refused
  refunded
}

Table Client {
  id            integer [primary key]
  name          varchar
  client_type   varchar
  document      varchar [unique]
  email         varchar [unique]
  phone_number  varchar
}

Table Address {
  id           integer [primary key]
  street       varchar
  number       varchar
  complement   varchar [null]
  neighborhood varchar
  city         varchar
  state        varchar
  zip_code     varchar
  client_id    integer [ref: > Client.id]
}

Table Product {
  id          integer [primary key]
  sku         varchar [unique]
  name        varchar
  image_url   varchar
  description varchar [null]
  stock       integer
  price       double
}

Table OrderProduct {
  id            integer [primary key]
  extra_infos   varchar [null]
  quantity      integer
  product_price double
  total_value   double
  product_id    integer [ref: > Product.id]
  order_id      integer [ref: > Order.id]
}

Table Order {
  id             integer [primary key]
  total_discount double [null]
  extra_fee      double [null]
  shipping_value double [null]
  total_value    double
  payment_status PaymentStatus
  order_status   OrderStatus
  client_id      integer [ref: > Client.id]
  address_id     integer [ref: > Address.id]
}